--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,4 +4,4 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Oops, it seems that you have stepped into undiscovered space...
